--- a/Path Tracer.vcxproj
+++ b/Path Tracer.vcxproj
@@ -170,8 +170,10 @@
     <ClInclude Include="include\Texture.h" />
     <ClInclude Include="include\Renderer.h" />
     <ClInclude Include="include\Scene.h" />
+    <ClInclude Include="include\Material.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="source\Material.cpp" />
     <ClCompile Include="source\Camera.cpp" />
     <ClCompile Include="source\Scene.cpp" />
     <ClCompile Include="source\Renderer.cpp" />
