Boost DLL Start

--- a/Path Tracer.vcxproj
+++ b/Path Tracer.vcxproj
@@ -19,6 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="External\glad\glad.h" />
+    <ClInclude Include="External\glad\khrplatform.h" />
     <ClInclude Include="External\imgui-1.90\backends\imgui_impl_glfw.h" />
     <ClInclude Include="External\imgui-1.90\backends\imgui_impl_opengl3.h" />
     <ClInclude Include="External\imgui-1.90\imconfig.h" />
@@ -47,8 +49,10 @@
     <ClInclude Include="Include\Object\Mesh.h" />
     <ClInclude Include="Include\Object\Scene_Object.h" />
     <ClInclude Include="Include\Rendering\Render_Kernel.h" />
+    <ClInclude Include="Include\Api.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Plugins\Api_base.cpp" />
     <ClCompile Include="External\imgui-1.90\backends\imgui_impl_glfw.cpp" />
     <ClCompile Include="External\imgui-1.90\backends\imgui_impl_opengl3.cpp" />
     <ClCompile Include="External\imgui-1.90\imgui.cpp" />
@@ -131,22 +135,19 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(SolutionDir)\Include;$(SolutionDir)\External\imgui-1.90;$(IncludePath)</IncludePath>
-    <LibraryPath>$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)\Include;$(SolutionDir)\External;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>$(SolutionDir)\Include;$(SolutionDir)\External\imgui-1.90;$(IncludePath)</IncludePath>
-    <LibraryPath>$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)\Include;$(SolutionDir)\External;$(IncludePath)</IncludePath>
   </PropertyGroup>
-  <PropertyGroup Label="Vcpkg">
-    <VcpkgEnableManifest>true</VcpkgEnableManifest>
-  </PropertyGroup>
+  <PropertyGroup Label="Vcpkg" />
   <PropertyGroup Label="Vcpkg" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <VcpkgConfiguration>Release</VcpkgConfiguration>
-    <VcpkgInstalledDir>.\External</VcpkgInstalledDir>
+    <VcpkgInstalledDir>
+    </VcpkgInstalledDir>
   </PropertyGroup>
   <PropertyGroup Label="Vcpkg" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <VcpkgInstalledDir>.\External</VcpkgInstalledDir>
+    <VcpkgInstalledDir>
+    </VcpkgInstalledDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -182,7 +183,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)\External;$(SolutionDir)\External\glad;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\External;$(SolutionDir)\External\glad;$(SolutionDir)\External\imgui-1.90;$(SolutionDir)\External\boost-1.82.0;$(SolutionDir)\External\glm-0.9.9.8\glm;$(SolutionDir)\External\glfw-3.3.8\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <OpenMPSupport>true</OpenMPSupport>
@@ -190,8 +191,8 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>glfw3.lib;libboost_filesystem-vc143-mt-x64-1_82.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)\External\glfw-3.3.8\lib-vc2022;$(SolutionDir)\External\boost-1.82.0\bin.v2\libs\filesystem\build\msvc-14.3\release\link-static\threading-multi;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -202,7 +203,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)\External;$(SolutionDir)\External\glad;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\External;$(SolutionDir)\External\glad;$(SolutionDir)\External\imgui-1.90;$(SolutionDir)\External\boost-1.82.0;$(SolutionDir)\External\glm-0.9.9.8\glm;$(SolutionDir)\External\glfw-3.3.8\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <OpenMPSupport>true</OpenMPSupport>
@@ -212,8 +213,8 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>glfw3.lib;libboost_filesystem-vc143-mt-x64-1_82.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)\External\glfw-3.3.8\lib-vc2022;$(SolutionDir)\External\boost-1.82.0\bin.v2\libs\filesystem\build\msvc-14.3\release\link-static\threading-multi;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
